--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-/*.App {
+/*
+.App {
   padding: 30px;
   display: flex;
 }
@@ -18,7 +19,8 @@
 .active-filter {
   background-color: aquamarine;
 }
-*/
+
 .is-done {
   opacity: 0.5;
 }
+*/
